correcting text alignment

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,6 +20,7 @@ body {
 h1,
 h2,
 h3 {
+  text-align: initial;
   margin: 0;
   font-weight: 400;
   &.lg-heading {
